--- a/front-end/src/app/pages/employee/crud-categoria/crud-categoria.component.css
+++ b/front-end/src/app/pages/employee/crud-categoria/crud-categoria.component.css
@@ -1,189 +1,194 @@
 * {
-	border: 0;
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+  border: 0;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 main {
-	--bg-color: transparent;
-	height: calc(100dvh);
-	background: var(--bg-color);
-	width: 100%;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	overflow: hidden;
+  --bg-color: transparent;
+  height: calc(100dvh);
+  background: var(--bg-color);
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
 }
 
 #container {
-	display: flex;
-	flex-direction: column;
-	width: 40%;
-	text-align: center;
-	background: rgba(255, 255, 255, 0.05);
-	padding: 1%;
-	border-radius: 10px;
-	max-height: 100%;
-	gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+  text-align: center;
+  background: rgba(255, 255, 255, 0.05);
+  padding: 1%;
+  border-radius: 10px;
+  max-height: 100%;
+  gap: 1rem;
 }
 
 h1 {
-	font-size: 2.5rem;
-	font-family: "Rubik", sans-serif;
-	font-weight: 700;
-	color: white;
+  font-size: 2.5rem;
+  font-family: "Rubik", sans-serif;
+  font-weight: 700;
+  color: white;
 }
 
 button {
-	height: 2.5rem;
-	border-radius: 0.5rem;
-	background: linear-gradient(135deg, orange, red);
-	color: white;
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 1rem;
-	font-weight: 600;
-	cursor: pointer;
-	padding: 10px;
+  height: 2.5rem;
+  border-radius: 0.5rem;
+  background: linear-gradient(135deg, orange, red);
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+  font-weight: 600;
+  cursor: pointer;
+  padding: 10px;
 }
 
 ::-webkit-scrollbar {
-	width: 10px;
-	background-color: black;
+  width: 10px;
+  background-color: black;
 }
 
 ::-webkit-scrollbar-thumb {
-	background-color: black;
-	border-radius: 10px;
-	border: none;
-	margin-left: 10px;
+  background-color: black;
+  border-radius: 10px;
+  border: none;
+  margin-left: 10px;
 }
 
 ::-webkit-scrollbar-track {
-	background-color: white;
-	border-radius: 10px;
+  background-color: white;
+  border-radius: 10px;
 }
 
 #category-form {
-	display: flex;
-	justify-content: center;
-	margin-bottom: 2rem;
-	width: 100%;
-	padding: 0 1rem;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 2rem;
+  width: 100%;
+  padding: 0 1rem;
 }
 
 #category-input,
 #edit-category-input {
-	padding: 0.5rem;
-	font-size: 1rem;
-	width: 200px;
-	margin-right: 1rem;
-	width: 75%;
-	border-radius: 0.5rem;
+  padding: 0.5rem;
+  font-size: 1rem;
+  width: 200px;
+  margin-right: 1rem;
+  width: 75%;
+  border-radius: 0.5rem;
 }
 
 #edit-category-input {
-    width: 100%;
-    box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
+  width: 100%;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
 }
 
 #category-input::placeholder {
-	font-size: 1rem;
-	color: rgb(99, 99, 99);
-	font-weight: 600;
-	font-family: Arial, Helvetica, sans-serif;
-	padding: 0 0.5rem;
+  font-size: 1rem;
+  color: rgb(99, 99, 99);
+  font-weight: 600;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 0 0.5rem;
 }
 
 #add-category {
-	cursor: pointer;
-	width: 25%;
+  cursor: pointer;
+  width: 25%;
 }
 
 #category-list {
-	max-width: 100%;
-	margin: 0 1rem;
-	overflow: auto;
+  max-width: 100%;
+  margin: 0 1rem;
+  overflow: auto;
 }
 
 #categories {
-	list-style: none;
-	padding: 0;
+  list-style: none;
+  padding: 0;
 }
 
 .category-item {
-	display: flex;
-	justify-content: space-between;
-	background-color: white;
-	padding: 0.5rem 1rem;
-	margin-bottom: 0.5rem;
-	border-radius: 5px;
-	box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-	align-items: center;
+  display: flex;
+  justify-content: space-between;
+  background-color: white;
+  padding: 0.5rem 1rem;
+  margin-bottom: 0.5rem;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  align-items: center;
 }
 
 .category-item span {
-	font-size: 1.1rem;
-	font-weight: 600;
-	color: black;
-	font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.1rem;
+  font-weight: 600;
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .category-item button {
-	margin-left: 0.5rem;
-	cursor: pointer;
+  margin-left: 0.5rem;
+  cursor: pointer;
 }
 
 .modal {
-	position: fixed;
-	z-index: 1;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	overflow: auto;
-	background-color: rgba(0, 0, 0, 0.4);
-	display: flex;
-	justify-content: center;
-	align-items: center;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .modal-content {
-	background-color: white;
-	padding: 20px;
-	border: 1px solid #888;
-	width: 80%;
-	max-width: 400px;
-	border-radius: 10px;
-	box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-	position: relative;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+  background-color: white;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 400px;
+  border-radius: 10px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .modal-content div {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.modal-content h2, .close-button {
-    font-size: 1.5rem;
-    font-weight: 600;
-    font-family: Arial, Helvetica, sans-serif;
+.modal-content h2,
+.close-button {
+  font-size: 1.5rem;
+  font-weight: 600;
+  font-family: Arial, Helvetica, sans-serif;
 }
+
+.modal-content p {
+	font-family: Arial, Helvetica, sans-serif;
+} 
 
 .close-button {
-	color: #aaa;
-	float: right;
-	font-size: 2rem;
-	font-weight: bold;
+  color: #aaa;
+  float: right;
+  font-size: 2rem;
+  font-weight: bold;
 }
 
 .close-button:hover,
 .close-button:focus {
-	color: black;
-	text-decoration: none;
-	cursor: pointer;
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
