--- a/front-end/src/app/pages/employee/crud-funcionario/crud-funcionario.component.css
+++ b/front-end/src/app/pages/employee/crud-funcionario/crud-funcionario.component.css
@@ -152,6 +152,10 @@ button {
 	box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
 }
 
+.modal-content p {
+	font-family: Arial, Helvetica, sans-serif;
+}
+
 .modal-content input::placeholder {
 	padding-left: 0.5rem;
 }
