--- a/front-end/src/styles.css
+++ b/front-end/src/styles.css
@@ -26,3 +26,15 @@ body {
 	width: 100vw;
 	min-height: 100dvh;
 }
+
+#container {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    margin: auto;
+    text-align: center;
+    background: rgba(255, 255, 255, 0.055);
+    padding: 1%;
+    border-radius: 10px;
+    margin-top: 4dvh;
+}
