--- a/front-end/src/app/pages/employee/home-funcionario/home-funcionario.component.html
+++ b/front-end/src/app/pages/employee/home-funcionario/home-funcionario.component.html
@@ -1,50 +1,32 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inicial</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
-    rel="stylesheet">
-    <link rel="stylesheet" href="../../customer/style/style-padrao.css">
-</head>
-
-<body>
-  <app-header-cliente></app-header-cliente>
-  <div id="principal">
-    <app-navbar-funcionario></app-navbar-funcionario>
-      <main>
-        <h3>Solicitações</h3>
-        <div class="tabela">
-          <table id="table-user">
-            <thead>
-              <tr>
-                <th>ID</th>
-                <th>Data</th>
-                <th>Descrição</th>
-                <th>Status</th>
-                <th>Ação</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let servico of servicosFiltrados">
-                <td class="item">{{ servico.id }}</td>
-                <td class="item">{{ servico.data }}</td>
-                <td class="item">{{ servico.descricaoErro | slice:0:30 }}</td>
-                <td class="item">{{ servico.status }}</td>
-                <td class="item">
-                  <button *ngIf="servico.status === 'ABERTA'" (click)="Efetuaorcamento(servico.id)">Efetuar Orçamento</button>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </main>
+<app-header-cliente></app-header-cliente>
+<div id="principal">
+  <app-navbar-funcionario></app-navbar-funcionario>
+  <main>
+    <h3>Solicitações</h3>
+    <div class="tabela">
+      <table id="table-user">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Data</th>
+            <th>Descrição</th>
+            <th>Status</th>
+            <th>Ação</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let servico of servicosFiltrados">
+            <td class="item">{{ servico.id }}</td>
+            <td class="item">{{ servico.data }}</td>
+            <td class="item">{{ servico.descricaoErro | slice:0:30 }}</td>
+            <td class="item">{{ servico.status }}</td>
+            <td class="item">
+              <button *ngIf="servico.status === 'ABERTA'" (click)="Efetuaorcamento(servico.id)">Efetuar
+                Orçamento</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-</body>
-
-</html>
+  </main>
+</div>
