melhoria mensagens de erro no autocadastro

--- a/front-end/src/app/material/form-register/form-register.component.html
+++ b/front-end/src/app/material/form-register/form-register.component.html
@@ -74,4 +74,7 @@
     </div>
 
     <button type="submit">Enviar</button>
+    <div *ngIf="statusMessage" class="status-message" [ngClass]="{'success': isSuccess, 'error': !isSuccess}">
+        {{ statusMessage }}
+      </div>
 </form>
