--- a/front-end/src/app/material/form-register/form-register.component.css
+++ b/front-end/src/app/material/form-register/form-register.component.css
@@ -106,3 +106,20 @@ input.ng-invalid.ng-dirty {
     font-size: 0.8rem;
     text-align: left;
 }
+
+.status-message {
+    margin-top: 15px;
+    padding: 10px;
+    border-radius: 5px;
+  }
+  
+  .success {
+    background-color: #d4edda;
+    color: #155724;
+  }
+  
+  .error {
+    background-color: #f8d7da;
+    color: #721c24;
+  }
+  
