--- a/front-end/src/app/material/header-cliente/header-cliente.component.html
+++ b/front-end/src/app/material/header-cliente/header-cliente.component.html
@@ -4,8 +4,8 @@
       <h1>{{ titulo }}</h1>
     </div>
     <div class="container_top_right">
-      <h4>{{ usuarioLogado.nome }}</h4>
-      <h4>{{ usuarioLogado.email }}</h4>
+      <h4>{{ nomeCliente }}</h4>
+      <h4>{{ emailCliente }}</h4>
       <a>
         <button (click)="goToMenu()">Sair</button>
       </a>
