--- a/front-end/src/app/pages/employee/crud-categoria/crud-categoria.component.html
+++ b/front-end/src/app/pages/employee/crud-categoria/crud-categoria.component.html
@@ -2,46 +2,62 @@
   <div id="container">
     <h1>Categorias de Equipamentos</h1>
     <form id="category-form">
-      <input type="text" id="category-input" placeholder="Nova Categoria" #categoriaInput>
-      <button-material (click)="addCategoria()" [text]="'Adicionar'"></button-material>
+      <input
+        type="text"
+        id="category-input"
+        placeholder="Nova Categoria"
+        #categoriaInput
+      />
+      <button-material
+        (click)="addCategoria()"
+        [text]="'Adicionar'"
+      ></button-material>
     </form>
     <div id="category-list">
       <ul id="categories">
         <li *ngFor="let categoria of categorias" class="category-item">
-          <span>{{ categoria }}</span>
+          <span>{{ categoria.nomeCategoria }}</span>
           <div>
             <button (click)="editCategoria(categoria)">Editar</button>
             <button (click)="openDeleteModal(categoria)">Excluir</button>
           </div>
         </li>
-
       </ul>
     </div>
 
     <button-material [text]="'Voltar'" (click)="goBack()"></button-material>
 
+    <!-- Modal de Edição -->
     <div *ngIf="isEditCategoriaModalOpen" class="modal">
       <div class="modal-content">
         <div>
           <h2>Editar Categoria</h2>
           <span class="close-button" (click)="closeEditModal()">&times;</span>
         </div>
-        <input type="text" id="edit-category-input" [(ngModel)]="categoriaEditada" #editCategoryInput>
-        <button (click)="saveCategoriaEditada()">Salvar</button>
+        <input
+          type="text"
+          id="edit-category-input"
+          [(ngModel)]="categoriaEditada.nomeCategoria"
+          #editCategoryInput
+        />
+        <button (click)="updateCategoria()">Salvar</button>
       </div>
     </div>
 
+    <!-- Modal de Exclusão -->
     <div *ngIf="isDeleteCategoriaModalOpen" class="modal">
       <div class="modal-content">
         <div>
           <h2>Confirmar Exclusão</h2>
           <span class="close-button" (click)="closeDeleteModal()">&times;</span>
         </div>
-        <p>Tem certeza de que deseja excluir a categoria "{{ categoriaParaExcluir }}"?</p>
+        <p>
+          Tem certeza de que deseja excluir a categoria
+          "{{ categoriaParaExcluir?.nomeCategoria }}"?
+        </p>
         <button (click)="confirmDeleteCategoria()">Confirmar</button>
         <button (click)="closeDeleteModal()">Cancelar</button>
       </div>
     </div>
-
   </div>
 </main>
