--- a/front-end/src/app/pages/customer/home-cliente/home-cliente.component.html
+++ b/front-end/src/app/pages/customer/home-cliente/home-cliente.component.html
@@ -17,27 +17,33 @@
         <tbody>
           <tr *ngFor="let servico of servicos">
             <td class="item">{{ servico.id }}</td>
-            <td class="item">{{ servico.data }}</td>
-            <td class="item">{{ servico.descricaoErro | slice:0:30 }}</td>
-            <td class="item">{{ servico.status }}</td>
+            <td class="item">{{ servico.dataCriacao }}</td>
+            <td class="item">{{ servico.descricaoDefeito | slice:0:30 }}</td>
+            <td class="item">{{ servico.nomeStatus }}</td>
             <td class="item">
-              <button *ngIf="servico.status === 'ABERTA'" (click)="visualizarServico(servico.id)">Visualizar
-                Serviço</button> <!--Leva para a tela de visualizar-->
-              <button *ngIf="servico.status === 'ORÇADA'" (click)="mostrarOrcamento(servico.id)">Aprovar/Rejeitar
-                Serviço</button> <!--Leva para a tela de aprovacao-->
-              <!--<button *ngIf="servico.status === 'APROVADA'" (click)="visualizarServico(servico.id)">Visualizar Serviço</button> APROVADA: Sem botão de ação-->
-              <button *ngIf="servico.status === 'REJEITADA'" (click)="resgatarServico(servico.id)">Resgatar
-                Serviço</button> <!--Apenas a acao de resgatar servico -->
-              <button *ngIf="servico.status === 'REDIRECIONADA'" (click)="visualizarServico(servico.id)">Visualizar
-                Serviço</button> <!--Leva para a tela de visualizar-->
-              <button *ngIf="servico.status === 'ARRUMADA'" (click)="pagarServico(servico.id)">Pagar Serviço</button>
-              <!--Leva para a tela de visualizar-->
-              <button *ngIf="servico.status === 'AGUARDANDO PAGAMENTO'" (click)="pagarServico(servico.id)">Pagar
-                Serviço</button> <!--Leva para a tela de pagamento-->
-              <button *ngIf="servico.status === 'PAGA'" (click)="visualizarServico(servico.id)">Visualizar
-                Serviço</button> <!--Leva para a tela de visualizar-->
-              <button *ngIf="servico.status === 'FINALIZADA'" (click)="visualizarServico(servico.id)">Visualizar
-                Serviço</button> <!--Leva para a tela de visualizar-->
+              <ng-container [ngSwitch]="servico.nomeStatus">
+                <button *ngSwitchCase="'ABERTA'" (click)="visualizarServico(servico.id)">
+                  Visualizar Serviço
+                </button>
+                
+                <button *ngSwitchCase="'ORCADA'" (click)="mostrarOrcamento(servico.id)">
+                  Aprovar/Rejeitar Serviço
+                </button>
+                
+                <button *ngSwitchCase="'REJEITADA'" (click)="resgatarServico(servico.id)">
+                  Resgatar Serviço
+                </button>
+                
+                <button *ngSwitchCase="'ARRUMADA'" (click)="pagarServico(servico.id)">
+                  Pagar Serviço
+                </button>
+                
+                <span *ngSwitchCase="'APROVADA'"></span>
+                
+                <button *ngSwitchDefault (click)="visualizarServico(servico.id)">
+                  Visualizar Serviço
+                </button>
+              </ng-container>
             </td>
           </tr>
         </tbody>
