fix: visualizar serviço

--- a/front-end/src/app/pages/customer/view-solicitacao/view-solicitacao.component.html
+++ b/front-end/src/app/pages/customer/view-solicitacao/view-solicitacao.component.html
@@ -4,42 +4,43 @@
         <div id="container">
             <h1>Visualizar Solicitação</h1>
 
-            <div id="informacoes" *ngIf="item">
+            <div id="informacoes" *ngIf="servico">
                 <div class="linha-dupla">
                     <div class="item-orcamento">
                         <h3>Status Atual:</h3>
-                        <p>{{item.status}}</p>
+                        <p>{{servico.nomeStatus}}</p>
                     </div>
                     <div class="item-orcamento">
                         <h3>Categoria:</h3>
-                        <p>{{item.categoria}}</p>
+                        <p>{{servico.nomeCategoria}}</p>
                     </div>
-                    <div class="item-orcamento">
+                    <div *ngIf="budget?.precoOrcado" class="item-orcamento">
                         <h3>Preço Orçado:</h3>
-                        <p>{{item.preco}}</p>
+                        <p>{{budget?.precoOrcado}}</p>
                     </div>
                 </div>
                 <div class="item-orcamento">
                     <h3>Descrição do Equipamento:</h3>
-                    <p>{{item.descricaoEquipamento}}</p>
+                    <p>{{servico.descricaoEquipamento}}</p>
                 </div>
 
-                <div class="item-orcamento" id="descricao-erro" style=" height: 15dvh;">
+                <div *ngIf="erro" class="item-orcamento" id="descricao-erro" style=" height: 15dvh;">
                     <h3>Defeito:</h3>
-                    <p>{{item.descricaoErro}}</p>
+                    <p>{{erro}}</p>
                 </div>
 
                 <h3 id="title-lista-historico">Histórico da Solicitação:</h3>
                 <div id="lista-historico">
                     <ul>
-                        <li *ngIf="item.data">Criação: {{item.data}}</li>
-                        <li *ngIf="item.dataOrcamento">Orçamento: {{item.dataOrcamento}} - {{item.funcionario}}</li>
-                        <li *ngIf="item.dataRecuperacao">Recuperação: {{item.dataRecuperacao}} -
-                            {{item.funcionario}}</li>
-                        <li *ngIf="item.dataConserto">Conserto: {{item.dataConserto}} - {{item.funcionario}}</li>
-                        <li *ngIf="item.dataFinalizacao">Finalização: {{item.dataFinalizacao}} -
-                            {{item.funcionario}}</li>
-                        <li *ngIf="item.motivoRejeicao">Rejeição: {{item.motivoRejeicao}} - {{item.funcionario}}
+                        <li *ngIf="servico.dataCriacao">Criação: {{servico.dataCriacao}}</li>
+                        <li *ngIf="budget?.precoOrcado">Orçamento: R$ {{budget?.precoOrcado}} - {{servico.nomeFuncionario ?? "Ainda não definido"}}</li>
+                        <li *ngIf="budget?.dataRecuperacao">Recuperação: {{budget?.dataRecuperacao}} -
+                            {{servico.nomeFuncionario ?? "Ainda não definido"}}</li>
+                        <li *ngIf="servico.dataConserto">Conserto: {{servico.dataConserto}} -
+                            {{servico.nomeFuncionario ?? "Ainda não definido"}}</li>
+                        <li *ngIf="servico.dataFinalizacao">Finalização: {{servico.dataFinalizacao}} -
+                            {{servico.nomeFuncionario ?? "Ainda não definido"}}</li>
+                        <li *ngIf="budget?.dataRejeicao">Rejeição: {{budget?.dataRejeicao}} - {{servico.nomeFuncionario ?? "Ainda não definido"}}
                         </li>
                     </ul>
                 </div>
