--- a/front-end/src/app/pages/employee/efetuar-manutencao/efetuar-manutencao.component.html
+++ b/front-end/src/app/pages/employee/efetuar-manutencao/efetuar-manutencao.component.html
@@ -3,41 +3,39 @@
   <main>
     <div id="container">
       <h1>Efetuar Manutenção</h1>
-      <div id="informacoes" *ngIf="item">
+      <div id="informacoes" *ngIf="servico">
         <h2 style="padding-bottom: 1dvh;">Detalhes da Solicitação</h2>
+
         <div class="item-orcamento">
           <h3>Descrição do Equipamento:</h3>
-          <p>{{item.descricaoEquipamento}}</p>
+          <p>{{servico.descricaoEquipamento}}</p>
         </div>
+        
         <div class="item-orcamento">
           <h3>Categoria:</h3>
-          <p>{{item.categoria}}</p>
+          <p>{{servico.nomeCategoria}}</p>
         </div>
+
         <div class="item-orcamento">
           <h3>Defeito:</h3>
-          <p>{{item.descricaoErro}}</p>
+          <p>{{servico.descricaoDefeito}}</p>
         </div>
-        <div>
 
-        </div>
         <h2 style="padding-bottom: 1dvh;">Dados do cliente</h2>
+
         <div id="dados-cliente">
           <div class="item-orcamento">
             <h3>Nome cliente:</h3>
-            <p>{{cliente.nome}}</p>
-          </div>
-          <div class="item-orcamento">
-            <h3>E-mail cliente:</h3>
-            <p>{{cliente.email}}</p>
+            <p>{{servico.nomeCliente}}</p>
           </div>
         </div>
       </div>
+
       <button *ngIf="!mostrarFormulario && !mostrarComboBox" id="button-conserto" class="first_button"
         (click)="efetuarManutencao()">Efetuar
         Manutenção</button>
       <button *ngIf="!mostrarFormulario && !mostrarComboBox" (click)="mostrarRedirecionamento()">Redirecionar</button>
 
-      <!-- Formulário de Efetuar Manutenção -->
       <div *ngIf="mostrarFormulario" class="item-form">
         <div>
           <h3>Descrição da Manutenção</h3>
@@ -47,7 +45,7 @@
           <h3>Orientações para o Cliente</h3>
           <textarea [(ngModel)]="orientacoesCliente" placeholder="Digite as orientações para o cliente"></textarea>
         </div>
-        <button (click)="onSubmit()">Registrar Manutenção</button>
+        <button (click)="registrarManutencao()">Registrar Manutenção</button>
       </div>
 
       <!-- ComboBox para Redirecionamento de Funcionário -->
