ARRUMAR pela func

--- a/front-end/src/app/pages/customer/solic-manutencao-cliente/solic-manutencao-cliente.component.html
+++ b/front-end/src/app/pages/customer/solic-manutencao-cliente/solic-manutencao-cliente.component.html
@@ -46,7 +46,7 @@
                 </small>
                 <input type="hidden" id="request-date" name="request-date" value="">
                 <input type="hidden" id="request-status" name="request-status" value="ABERTA">
-                <button>Enviar</button>
+                <button type="submit">Enviar</button>
             </form>
             <button onclick="history.back()" id="btn-voltar">Voltar</button>
         </div>
