--- a/front-end/src/app/pages/employee/efetuar-orcamento/efetuar-orcamento.component.html
+++ b/front-end/src/app/pages/employee/efetuar-orcamento/efetuar-orcamento.component.html
@@ -3,32 +3,29 @@
     <main>
         <div id="container">
             <h1>Efetuar Orçamento</h1>
-            <div id="informacoes" *ngIf="item">
+            <div id="informacoes">
                 <h2 style="padding-bottom: 1dvh;">Detalhes da Solicitação</h2>
                 <div class="item-orcamento">
                     <h3>Descrição do Equipamento:</h3>
-                    <p>{{item.descricaoEquipamento}}</p>
+                    <p>{{servico?.descricaoEquipamento}}</p>
                 </div>
                 <div class="item-orcamento">
                     <h3>Categoria:</h3>
-                    <p>{{item.categoria}}</p>
+                    <p>{{servico?.nomeCategoria}}</p>
                 </div>
                 <div class="item-orcamento">
                     <h3>Defeito:</h3>
-                    <p>{{item.descricaoErro}}</p>
-                </div>
-                <div>
-
+                    <p>{{servico?.descricaoDefeito}}</p>
                 </div>
                 <h2 style="padding-bottom: 1dvh;">Dados do cliente</h2>
                 <div id="dados-cliente">
                     <div class="item-orcamento">
                         <h3>Nome cliente:</h3>
-                        <p>{{cliente.nome}}</p>
+                        <p>{{servico?.nomeCliente}}</p>
                     </div>
                     <div class="item-orcamento">
                         <h3>E-mail cliente:</h3>
-                        <p>{{cliente.email}}</p>
+                        <p>{{servico?.emailCliente}}</p>
                     </div>
                 </div>
             </div>
@@ -45,7 +42,6 @@
                 </div>
                 <button type="submit" [disabled]="valorInput.invalid" class="submit-button">Enviar</button>
             </form>
-
             <button onclick="history.back()">Voltar</button>
         </div>
     </main>
