--- a/front-end/src/app/pages/customer/orcamento-cliente/orcamento-cliente.component.css
+++ b/front-end/src/app/pages/customer/orcamento-cliente/orcamento-cliente.component.css
@@ -32,3 +32,13 @@
 #price {
     text-align: right;
 }
+
+.custom-modal .mat-dialog-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 8px; /* Arredondar as bordas */
+    padding: 16px;      /* Espaçamento interno */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2); /* Sombra suave */
+  }
+  
